# EngineFiring

./: .clang-format  .gitignore  AudioVector.cpp  AudioVector.h  CMakeLists.txt  Engine.cpp  Engine.h  EngineSoundGenerator.cpp  EngineSoundGenerator.h  Makefile  README.md  build-android.sh  build.sh  engine_live  generate_samples.py  kicker_export.mmpz  kicker_export.mmpz.bak  sim-buffered.cpp  svgcircle.py
assets/audio/: example.mcl  example_1_1_rpm.map  example_load_amp.map  tick_library.sb
assets/cars/458/: backfire_intensity_falloff.map  vehicle.cfg
assets/cars/aventador/: vehicle.cfg
assets/cars/c63_amg/: backfire_intensity.map  backfire_intensity_falloff.map  e_hi_amp.map  e_lo_amp.map  supercharger_amp.map  vehicle.cfg
assets/cars/clapped_vq/: backfire_intensity.map  e_hi_amp.map  vehicle.cfg
assets/cars/corvette/: vehicle.cfg
assets/cars/example/: backfire_intensity_falloff.map  e_mech_amp.map  example.cfg  turbo_shaft_rpm.map
assets/cars/gallardo_og/: backfire_intensity_falloff.map  vehicle.cfg
assets/cars/gtr_r35/: backfire_intensity_falloff.map  vehicle.cfg  whoosh_intensity.map
assets/cars/hellcat/: e_lo_amp.map  vehicle.cfg  whoosh_intensity.map
assets/cars/huracan/: backfire_intensity.map  backfire_intensity_falloff.map  vehicle.cfg
assets/cars/lfa/: backfire_intensity_falloff.map  e_hi_amp.map  e_lo_amp.map  e_mech_amp.map  vehicle.cfg
assets/cars/murci_sv/: backfire_intensity_falloff.map  e_hi_amp.map  e_lo_amp.map  e_mech_amp.map  vehicle.cfg
assets/cars/r8/: e_hi_amp.map  e_mech_amp.map  vehicle.cfg  whoosh_amp.map
assets/cars/sport_quattro/: backfire_intensity_falloff.map  vehicle.cfg  whoosh_amp.map  whoosh_intensity.map
assets/cars/supra/: backfire_intensity_falloff.map  e_lo_amp.map  turbo_shaft_rpm.map  vehicle.cfg  whoosh_amp.map  whoosh_intensity.map
assets/cars/v10_fsi/: backfire_intensity.map  e_lo_amp.map
assets/cars/zonda/: e_mech_amp.map  turbo_shaft_amp.map  vehicle.cfg
assets/graphs/: data.xy  data_export1.xy
assets/map2d/: example_v6.mcl  hi_amp.map  hi_rpm.map  lo_amp.map  lo_rpm.map  mech_rpm.map
assets/scripts/: example.lua  script.lua
examples/java/: TestDamper.java  TestEngine.java  TestEngineAudio.java
examples/java/com/hammer/engine/example/: TestDamper.java  TestEngine.java  TestEngineAudio.java
java/: TestDamper.java  TestEngine.java  TestEngineAudio.java
scripts/: 2d_map.py  generate_table.py  graph_edit.py  kicker.py
src/: AudioContext.cpp  AudioContext.h  AudioScene.h  AudioVector.cpp  AudioVector.h  BackfireSoundGenerator.cpp  BackfireSoundGenerator.h  Biquad.cpp  Biquad.h  Car.cpp  Car.h  CarBlendScene.h  CarTriBlendScene.h  ChorusFilter.h  CubicClipper.h  Damper.cpp  Damper.h  DerivativeFilter.h  EffectChain.h  Engine.cpp  Engine.h  EngineSoundGenerator.cpp  EngineSoundGenerator.h  ForceSilenceFilter.h  Graph.h  HardClamp.h  LuaBindingHelper.h  LuaEngine.h  Map2D.h  PostFilter.h  SaturatorFilter.h  Scene.h  SecondOrderFilter.h  SimpleConfig.h  SimpleSoundGenerator.cpp  SimpleSoundGenerator.h  SineClipper.h  SoundBank.cpp  SoundBank.h  SoundGenerator.h  (+7 more)
src/android/: OboeAudioCallback.cpp  OboeAudioCallback.h  OboeSinePlayer.cpp  OboeSinePlayer.h
src/sol/: config.hpp  forward.hpp  sol.hpp
